[tool.poetry]
name = "media-parser"
version = "0.1.3"
description = "Simple Telegraph media parser"
authors = ["FruitApple", "zombyacoff"]

[tool.poetry.dependencies]
python = "^3.12"
tuparser = "^0.1.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
