[tool.poetry]
name = "telegraph-media-parser"
version = "1.0.0"
description = "Telegraph media parser"
authors = ["FruitApple", "zombyacoff"]

[tool.poetry.dependencies]
python = "^3.12"
tuparser = "^0.2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
